cloudformation/hos-stack.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc0cabd7ab3e1f989d4": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.10.10.0/24",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "CloudformerVPC"
          }
        ]
      }
    },
    "vpcc013d8aa": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "subnet0655241bc78badd8d": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.10.0/24",
        "AvailabilityZone": "eu-central-1a",
        "VpcId": {
          "Ref": "vpc0cabd7ab3e1f989d4"
        }
      }
    },
    "subnet0419aa6e": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.16.0/20",
        "AvailabilityZone": "eu-central-1a",
        "VpcId": {
          "Ref": "vpcc013d8aa"
        }
      }
    },
    "subnetfd947d81": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.32.0/20",
        "AvailabilityZone": "eu-central-1b",
        "VpcId": {
          "Ref": "vpcc013d8aa"
        }
      }
    },
    "subnet0184784d": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.0.0/20",
        "AvailabilityZone": "eu-central-1c",
        "VpcId": {
          "Ref": "vpcc013d8aa"
        }
      }
    },
    "igw07a6bc207fabbfe02": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "igwfa24ea91": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "dopt1a35fe70": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "eu-central-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl090dbb9cecd05fc82": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0cabd7ab3e1f989d4"
        }
      }
    },
    "aclabe783c1": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpcc013d8aa"
        }
      }
    },
    "rtb0bb04ff44a5f7bc3a": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0cabd7ab3e1f989d4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "CloudformerVPCRouteTable"
          }
        ]
      }
    },
    "rtb0ba4252d55a19449a": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0cabd7ab3e1f989d4"
        }
      }
    },
    "rtbeacd8080": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcc013d8aa"
        }
      }
    },
    "rdsdevhelponspot": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "20",
        "AllowMajorVersionUpgrade": "false",
        "AutoMinorVersionUpgrade": "true",
        "DBInstanceClass": "db.t2.micro",
        "Port": "5432",
        "PubliclyAccessible": "true",
        "StorageType": "gp2",
        "BackupRetentionPeriod": "7",
        "MasterUsername": "postgres",
        "MasterUserPassword": "MyPassword",
        "PreferredBackupWindow": "21:20-21:50",
        "PreferredMaintenanceWindow": "fri:01:50-fri:02:20",
        "DBName": "MyDatabase",
        "Engine": "postgres",
        "EngineVersion": "12.2",
        "LicenseModel": "postgresql-license",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetdefault"
        },
        "VPCSecurityGroups": [
          {
            "Ref": "sgdefault"
          }
        ]
      }
    },
    "s3elasticbeanstalkeucentral1198891906952": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "AccessControl": "Private",
        "VersioningConfiguration": {
          "Status": "Suspended"
        }
      }
    },
    "dbsubnetdefault": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "default",
        "SubnetIds": [
          {
            "Ref": "subnet0184784d"
          },
          {
            "Ref": "subnetfd947d81"
          },
          {
            "Ref": "subnet0419aa6e"
          }
        ]
      }
    },
    "dbsubnetdefaultvpcc013d8aa": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Created from the RDS Management Console",
        "SubnetIds": [
          {
            "Ref": "subnet0184784d"
          },
          {
            "Ref": "subnetfd947d81"
          },
          {
            "Ref": "subnet0419aa6e"
          }
        ]
      }
    },
    "sgdefault": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default VPC security group",
        "VpcId": {
          "Ref": "vpcc013d8aa"
        }
      }
    },
    "sgCloudFormerStackWebServerSecurityGroup14QUFJASWIZ3L": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable HTTPS access via port 443",
        "VpcId": {
          "Ref": "vpc0cabd7ab3e1f989d4"
        }
      }
    },
    "dbsgdefault": {
      "Type": "AWS::RDS::DBSecurityGroup",
      "Properties": {
        "GroupDescription": "default"
      }
    },
    "s3policyelasticbeanstalkeucentral1198891906952": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "s3elasticbeanstalkeucentral1198891906952"
        },
        "PolicyDocument": {
          "Version": "2008-10-17",
          "Statement": [
            {
              "Sid": "eb-ad78f54a-f239-4c90-adda-49e5f56cb51e",
              "Effect": "Allow",
              "Principal": {
                "AWS": "arn:aws:iam::198891906952:role/aws-elasticbeanstalk-ec2-role"
              },
              "Action": "s3:PutObject",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    "elasticbeanstalk-eu-central-",
                    "1-198891906952/resources/environments/logs/*"
                  ]
                ]
              }
            },
            {
              "Sid": "eb-af163bf3-d27b-4712-b795-d1e33e331ca4",
              "Effect": "Allow",
              "Principal": {
                "AWS": "arn:aws:iam::198891906952:role/aws-elasticbeanstalk-ec2-role"
              },
              "Action": [
                "s3:ListBucket",
                "s3:ListBucketVersions",
                "s3:GetObject",
                "s3:GetObjectVersion"
              ],
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:s3:::",
                      "elasticbeanstalk-eu-central-",
                      "1-198891906952"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:s3:::",
                      "elasticbeanstalk-eu-central-",
                      "1-198891906952/resources/environments/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Sid": "eb-58950a8c-feb6-11e2-89e0-0800277d041b",
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Action": "s3:DeleteBucket",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    "elasticbeanstalk-eu-central-",
                    "1-198891906952"
                  ]
                ]
              }
            }
          ]
        }
      }
    },
    "acl9": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl090dbb9cecd05fc82"
        }
      }
    },
    "acl10": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl090dbb9cecd05fc82"
        }
      }
    },
    "acl11": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclabe783c1"
        }
      }
    },
    "acl12": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclabe783c1"
        }
      }
    },
    "subnetacl9": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl090dbb9cecd05fc82"
        },
        "SubnetId": {
          "Ref": "subnet0655241bc78badd8d"
        }
      }
    },
    "subnetacl10": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclabe783c1"
        },
        "SubnetId": {
          "Ref": "subnet0184784d"
        }
      }
    },
    "subnetacl11": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclabe783c1"
        },
        "SubnetId": {
          "Ref": "subnet0419aa6e"
        }
      }
    },
    "subnetacl12": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclabe783c1"
        },
        "SubnetId": {
          "Ref": "subnetfd947d81"
        }
      }
    },
    "gw5": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0cabd7ab3e1f989d4"
        },
        "InternetGatewayId": {
          "Ref": "igw07a6bc207fabbfe02"
        }
      }
    },
    "gw6": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcc013d8aa"
        },
        "InternetGatewayId": {
          "Ref": "igwfa24ea91"
        }
      }
    },
    "subnetroute7": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb0bb04ff44a5f7bc3a"
        },
        "SubnetId": {
          "Ref": "subnet0655241bc78badd8d"
        }
      }
    },
    "route5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb0bb04ff44a5f7bc3a"
        },
        "GatewayId": {
          "Ref": "igw07a6bc207fabbfe02"
        }
      },
      "DependsOn": "gw5"
    },
    "route6": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbeacd8080"
        },
        "GatewayId": {
          "Ref": "igwfa24ea91"
        }
      },
      "DependsOn": "gw6"
    },
    "dchpassoc5": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0cabd7ab3e1f989d4"
        },
        "DhcpOptionsId": {
          "Ref": "dopt1a35fe70"
        }
      }
    },
    "dchpassoc6": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpcc013d8aa"
        },
        "DhcpOptionsId": {
          "Ref": "dopt1a35fe70"
        }
      }
    },
    "ingress7": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "sgdefault"
        },
        "SourceSecurityGroupOwnerId": "198891906952"
      }
    },
    "ingress8": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgCloudFormerStackWebServerSecurityGroup14QUFJASWIZ3L"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress9": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress7": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress8": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgCloudFormerStackWebServerSecurityGroup14QUFJASWIZ3L"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress9": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "HoS-stack"
}
